Games/Chess/chess.css
body {
    font-family: Arial, sans-serif;
    background-color: lightsteelblue;

    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin: 0;
}
button {
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 6px;
    padding: 5px 10px;
    margin: 4px;
    cursor: pointer;
}
button:hover {
    background-color: lightcoral;
}
.return-button {
    position: absolute;
    top: 20px;
    left: 20px;
    padding: 10px 16px;
    background-color: lightblue;
    color: hotpink;
    font-size: large;
    font-weight: bold;
}
.return-button:hover {
    background-color: hotpink;
    color: lightblue;
}

.chess-table {
    border-collapse: collapse;
    border: 6px solid #4a2c1a;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}

.cell {
    width: 80px;
    height: 80px;
    text-align: center;
    vertical-align: center;
    font-size: 48px;
    user-select: none;

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.cell img {
    width: 20%;
    height: 20%;
    object-fit: contain;
}

.row:nth-child(odd) .cell:nth-child(odd),
.row:nth-child(even) .cell:nth-child(even) {
    background-color: #f0d9b5;
}

.row:nth-child(odd) .cell:nth-child(even),
.row:nth-child(even) .cell:nth-child(odd) {
    background-color: #b58863;
}

